# src/routes/slurs.js
@@ -1,0 +1,13 @@
+const { createSlurSus, createSlurVb } = require("../controller/slur");
+
+const { Router } = require("express");
+
+const router = Router();
+
+/*
+router.post("", createSlurVb);
+
+router.post("", createSlurSus);
+*/
+
+module.exports = router;
